tests/invalid/generic_type_alias_missing_arguments.wio
type Buffer<T> = T[];

fn Entry() -> i32 {
    let values: Buffer = [1, 2, 3];
    return 0;
}
